--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/totobono4/deluoode-translate-api#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "nodemon": "^2.0.20",
     "puppeteer": "^19.7.2",
     "swagger-ui-express": "^4.6.1"
   }
