--- a/package.json
+++ b/package.json
@@ -24,5 +24,12 @@
     "nodemon": "^2.0.20",
     "puppeteer": "^19.7.2",
     "swagger-ui-express": "^4.6.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.34.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
