--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "node main.js",
-    "deluoode": "node deluooder.js",
+    "deluoode": "node deluooder/deluooder.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
