--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   },
   "homepage": "https://github.com/totobono4/deluoode-translate-api#readme",
   "dependencies": {
+    "deluoode-translator": "github:totobono4/deluoode-translator",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
-    "puppeteer": "^19.7.2",
     "swagger-ui-express": "^4.6.1"
   },
   "devDependencies": {
